tests/ui/variance/variance-types-bounds.stderr
error: [+, +]
  --> $DIR/variance-types-bounds.rs:7:1
   |
LL | struct TestImm<A, B> {
   | ^^^^^^^^^^^^^^^^^^^^

error: [+, o]
  --> $DIR/variance-types-bounds.rs:13:1
   |
LL | struct TestMut<A, B:'static> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: [+, o]
  --> $DIR/variance-types-bounds.rs:19:1
   |
LL | struct TestIndirect<A:'static, B:'static> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: [o, o]
  --> $DIR/variance-types-bounds.rs:24:1
   |
LL | struct TestIndirect2<A:'static, B:'static> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: [o, o]
  --> $DIR/variance-types-bounds.rs:38:1
   |
LL | struct TestObject<A, R> {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

